
1999-01-06  Dominique Dumont  <domi@barrayar.grenoble.hp.com>
v1.002
	* Show.pm: first version after Puppet::Any split